@@ -7,6 +7,7 @@
 	- changed a default player number font and its color.
 	- changed a player's uniform number character to decimal number.
 	- fixed initial player positions.
+	- changed a default server host to 127.0.0.1
 
 	* src/display_x11.h:
 	* src/object2d.h:
